syntax = "proto3";

package customer_service;

service CustomerService {
    rpc GetCustomer (customerId) returns (Customer);
    rpc GetCustomerLabel (customerId) returns (Label);
}

message customerId {
    string id = 1;
}

message Label {
    string label = 1;
}

message Customer {
    string fullname = 2;
    string label = 3;
    Address address = 4;
    string tel = 5;
    string email = 6;
}

message Address {
    string zip = 1;
    string country = 2;
    string region = 3;
    string city = 4;
    string street = 5;
    string building = 6;
    string room = 7;
}