syntax = "proto3";

package lab_service;

service LabService {
    rpc GetLab (labId) returns (Lab);
    rpc GetLabLabel (labId) returns (Label);
}

message labId {
    string id = 1;
}

message Label {
    string label = 1;
}

message Lab {
    string fullname = 2;
    string label = 3;
    Address address = 4;
    string tel = 5;
    string email = 6;
}

message Address {
    string zip = 1;
    string country = 2;
    string region = 3;
    string city = 4;
    string street = 5;
    string building = 6;
    string room = 7;
}